Changes with melon 2.0.2                                          13 Apr 2020
    *) Optimized file function in melang
    *) Added functions for operating directoies in melang
    *) Supported variable arguments in melang
    *) Updated License

Changes with melon 2.0.1                                          11 Mar 2020
    *) Added message queue and topic in melang
    *) Fixed melang and fib-heap bugs

Changes with melon 2.0.0                                          08 Mar 2020
    *) Added UDP module in melang
    *) Updated print function for array in melang

Changes with melon 1.9.2                                          06 Mar 2020
    *) Added TCP module in melang

Changes with melon 1.9.1                                          03 Mar 2020
    *) Added eval function in melang
    *) Dropped melang's tcp functions

Changes with melon 1.9.0                                          01 Mar 2020
    *) Added MySQL module in script language
    *) Fixed file bugs in script language
    *) Added more sys-module functions for melang

Changes with melon 1.8.0                                          30 Sep 2019
    *) Updated Melang's productions

Changes with melon 1.7.0                                          20 Aug 2018
    *) Supported TCP network for melang

Changes with melon 1.6.12                                         14 Jul 2018
    *) Fixed some bugs in melang
    *) Supported Reactive Programming in melang

Changes with melon 1.6.11                                         03 Feb 2018
    *) Update License
    *) Add some basic functions for script language

Changes with melon 1.6.10                                         03 Aug 2017
    *) Added function to getting array length for melang script.
    *) Fixed some bugs for melang script.
    *) Supported adding property dynamically.

Changes with melon 1.6.9                                          01 Aug 2017
    *) Added reflection for melang script.
    *) Updated Red-Black Tree interfaces.